--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 header {
     margin: 0px auto;
     width: 960px;
-    background-color: beige;
+    background-color: tan;
     height: 190px;
   }
