--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+body {
+  margin: 0px;
+  width: 960px;
+}
+
+
 header {
     margin: 0px auto;
     width: 960px;
     background-color: tan;
     height: 190px;
   }
+
+main {}
+
+img {
+  margin: 5px;
+  width: 800;
+  height: 150px;
+} 
